src/test/deca/context/invalid/created/testOpCmp/EqualsBoolean.deca
// Description :
//    Test invalide : Opération de comparaison "==" sur des booléens
//
// Résultats :
//    Erreur contextuelle
//    Ligne 11:  IncompatibleTypesException: Only float or int types are accepted for this operation.

{
    boolean a = false; 
    boolean b = true;
    b = a == b;  //  Opération de comparaison "==" sur des booléens non autorisée
}
